added image route
